<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_movies"
        android:icon="@drawable/ic_movies"
        android:title="@string/title_movies" />

    <item

        android:id="@+id/navigation_sport"
        android:icon="@drawable/ic_sports"
        android:title="@string/title_sport" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_education"
        android:title="@string/title_education" />

    <item
        android:id="@+id/navigation_technology"
        android:icon="@drawable/ic_technology"
        android:title="@string/title_technology" />

    <item
        android:id="@+id/navigation_economy"
        android:icon="@drawable/ic_economy"
        android:title="@string/title_economy" />



</menu>
